change password route is updated
